Update to DevOps notes

--- a/agile_and_pm/software_dev_lifecycle.ipynb
+++ b/agile_and_pm/software_dev_lifecycle.ipynb
@@ -34,7 +34,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Good General Development Team Norms"
+    "## Customer User Journeys\n",
+    "* <ins>User Journey</ins>: a sequence of tasks central to user experience and crucial to service"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Good General Development Team Norms\n",
+    "* Be Humble: You're smart yet always interested in learning from others\n",
+    "* Work Transparently: You always deal in an honest, direct, and transparent way.\n",
+    "* Take Ownership: You embrace responsibility and find joy in having the answers\n",
+    "* Learn More: You regularly self-educate and improve your skill set.\n",
+    "* Show Gratitude: You show appreciation and respect to those you work with."
    ]
   },
   {
