--- a/cloud/gcp/gcp_devops_cert.ipynb
+++ b/cloud/gcp/gcp_devops_cert.ipynb
@@ -85,12 +85,64 @@
     "\n",
     "## Service Level Indicators (SLIs)\n",
     "\n",
-    "* <ins>Service Level Indicator (SLI)</ins>: \"A carefully defined quantitative measure of some aspect of the level of service that is provided\". SLIs are metrics over time that define \"reliability\" - they are specific to a user journey such as request/response, data processing, or storage - that show how well a service is doing.\n",
+    "* <ins>Service Level Indicator (SLI)</ins>: \"A carefully defined quantitative measure of some aspect of the level of service that is provided\". SLIs are metrics over time that define \"reliability\" - they are specific to a user journey such as request/response, data processing, or storage, that show how well a service is doing.\n",
     "    * Example SLIs:\n",
-    "        * Request latency: how long it takes to return a response to a request\n",
-    "        * Failure rate: a fraction of all rates received: (unsuccessful requests/all requests)\n",
-    "        * Batch Throughput: proportion of time = data processing rate > than a threshold\n",
-    "\n"
+    "        * <ins>Request latency</ins>: how long it takes to return a response to a request\n",
+    "        * <ins>Failure rate</ins>: a fraction of all rates received: (unsuccessful requests/all requests)\n",
+    "        * <ins>Batch Throughput</ins>: proportion of time = data processing rate > than a threshold\n",
+    "    * Example SLIs for a Request/Response:\n",
+    "        * <ins>Availability</ins>: proportion of valid requests served successfully\n",
+    "        * <ins>Latency</ins>: proportion of valid requests served faster than a certain threshold\n",
+    "        * <ins>Quality</ins>: proportion of valid requests served maintaining quality\n",
+    "    * Example SLIs for Data Processing:\n",
+    "        * <ins>Freshness</ins>: proportion of valid data updated more recently than a threshold\n",
+    "        * <ins>Correctness</ins>: proportion of valid data producing correct output\n",
+    "        * <ins>Throughput</ins>: proportion of time where the data processing rate is faster than a threshold\n",
+    "\n",
+    "### Google's 4 Golden Signals (SLIs)\n",
+    "* Latency: The time it takes for your service to fulfill a request\n",
+    "* Errors: The rate at which your service fails\n",
+    "* Traffic: How much demand is directed at your service\n",
+    "* Saturation: A meausure of how close to fully utilized the service's resources are\n",
+    "\n",
+    "### Simple SLI Aggregation Equation\n",
+    "\n",
+    "$SLI = \\left( \\frac{\\text{good events}}{\\text{valid events}} \\right) \\times 100$\n",
+    "\n",
+    "### SLI Best Practice\n",
+    "1. Limit the number of SLIs you choose\n",
+    "    * 3-5 per user journey as too many increases the difficulty for the operator and can lead to data contradictions\n",
+    "2. Reduce complexity\n",
+    "    * Define simple, discrete SLIs that can be calculated with little compute\n",
+    "3. Prioritize journeys\n",
+    "    * Identify user-centric events/journeys and prioritize those over developer-centric ones\n",
+    "4. Aggregate similar SLIs\n",
+    "    * Collect data over time and turn it into a rate, average, or percentile\n",
+    "5. Bucket to distinguish response classes\n",
+    "    * Not all requests are the same (some may be people, bots, or background apps)\n",
+    "6. Collect data at load balancer\n",
+    "    * It's the most efficient method of data collection and it's the closest to the user's experience\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Service Level Objectives (SLOs)\n",
+    "* <ins>Service Level Objectives</ins>: \"SLOs specify a target level for the reliability of your service\" - Steven Thurgood and David Ferguson, The Site Reliability Workbook. Your SLOs should always be < 100% reliability as it's very expensive to get near 100%, it becomes more technically complex, and users generally don't need 100% to have an acceptable experience.\n",
+    "    * SLOs are measured by SLIs and can be a single target value or a range of values\n",
+    "    * SLOs are agreed-upon bounds regarding how often SLIs must be met. For example:\n",
+    "        * SLI = site page latency requests < 300ms over last 5 minutes @ 95%\n",
+    "        * SLO = 95% percentile homepage SLI will succeed 99.9% over next year\n",
+    "    * SLOs need buy-in across the entire organization\n",
+    "    * Make your SLOs achievable and base them on past performance, if there is no historical data, collect some\n",
+    "    * Reminder that measurement does not equal user satisfaction\n",
+    "\n",
+    "### Aspirational SLOs\n",
+    "* Typically higher than achievable/standard SLOs\n",
+    "* Set a reasonable target and begin measuring \n"
    ]
   },
   {
