--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## 𝗔𝗿𝗰𝗵𝗶𝘁𝗲𝗰𝘁𝘂𝗿𝗲 & 𝗧𝗿𝗮𝗶𝗻𝗶𝗻𝗴\n",
     "\n",
-    "### Transformer Architecture (attention mechanisms\n",
+    "### Transformer Architecture (attention mechanisms)\n",
     "\n",
     "### Pre-training vs Fine-tuning\n",
     "\n",
@@ -76,17 +76,56 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## 𝗟𝗟𝗠 𝗘𝘃𝗮𝗹𝘂𝗮𝘁𝗶𝗼𝗻\n",
+    "## 𝗟𝗟𝗠 𝗘𝘃𝗮𝗹𝘂𝗮𝘁𝗶𝗼𝗻 - Metrics \n",
     "\n",
-    "### Metrics \n",
-    "1. Precision@K\n",
-    "2. Apology Rate\n",
-    "3. No Response Rate\n",
-    "4. Perplexity\n",
-    "5. ROUGE Scores\n",
-    "6. BLEU Scores\n",
-    "7. Intelligence\n",
-    "8. Relevance\n",
+    "### Precision@K\n",
+    "\n",
+    "A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It is the ratio of correctly identified relevant items within the total recommended items (the K-long list). As such, it answers the question, out of the top-K items suggested, how many are actually relevant to the user? \n",
+    "* K is the cut-off threshold that you choose to limit your evaluation to and it's dependent on the expectation of how many items your user is likely to interact with.\n",
+    "* Relevance is a binary label that is specific to your use case. For example, you might measure an item as relevant if a user clicks on it, adds it to a shopping cart, or purchases it.\n",
+    "\n",
+    "$\\text{Precision@K} = \\frac{\\text{Number of relevant items in K}}{Total number of items in K}$\n",
+    "\n",
+    "* Range: 0-1, a higher value means better performance\n",
+    "* Limitations:\n",
+    "    * Only reflects the number of relevant items in the top K, doesn't evaluate the ranking quality inside of K\n",
+    "\n",
+    "### Recall@K \n",
+    "\n",
+    "A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It measures the share of revelant items captured within the top K positions\n",
+    "* Range: 0-1, a higher value means better performance\n",
+    "* Limitations:\n",
+    "    * Only reflects the number of relevant items in the top K, doesn't evaluate the ranking quality inside of K\n",
+    "\n",
+    "### F-Score@K\n",
+    "\n",
+    "A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It provides a balanced measure of Precision@K and Recall@K\n",
+    "* Range: 0-1, a higher value means better performance\n",
+    "* Limitations:\n",
+    "    * Only reflects the number of relevant items in the top K, doesn't evaluate the ranking quality inside of K\n",
+    "\n",
+    "### Apology Rate\n",
+    "\n",
+    "### No Response Rate\n",
+    "\n",
+    "### Perplexity\n",
+    "\n",
+    "### ROUGE Scores\n",
+    "\n",
+    "### BLEU Score\n",
+    "\n",
+    "### Intelligence\n",
+    "\n",
+    "### Relevance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## LLM Eval Techniques\n",
     "\n",
     "### LLM-as-a-judge\n",
     "\n",
@@ -97,8 +136,7 @@
     "\n",
     "### A/B Testing Between Chatbots\n",
     "\n",
-    "### Bias Detection\n",
-    "\n"
+    "### Bias Detection"
    ]
   },
   {
