additional notes added.

--- a/cloud/gcp/gcp_devops_cert.ipynb
+++ b/cloud/gcp/gcp_devops_cert.ipynb
@@ -43,7 +43,7 @@
     "        * Track incidents (SLIs)\n",
     "        * Map SLIs to objectives (SLOs)\n",
     "* Idea 3\n",
-    "    * DevOps: Implement gradual cahnge\n",
+    "    * DevOps: Implement gradual change\n",
     "        * Small updates are better than large ones\n",
     "        * Small updates are easier to review and rollback from\n",
     "    * SRE: reduce costs of failure\n",
@@ -83,7 +83,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Service Level Indicators (SLIs)\n",
+    "## Service Level Indicators (SLI)\n",
     "\n",
     "* <ins>Service Level Indicator (SLI)</ins>: \"A carefully defined quantitative measure of some aspect of the level of service that is provided\". SLIs are metrics over time that define \"reliability\" - they are specific to a user journey such as request/response, data processing, or storage, that show how well a service is doing.\n",
     "    * Example SLIs:\n",
@@ -130,7 +130,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Service Level Objectives (SLOs)\n",
+    "## Service Level Objectives (SLO)\n",
     "* <ins>Service Level Objectives</ins>: \"SLOs specify a target level for the reliability of your service\" - Steven Thurgood and David Ferguson, The Site Reliability Workbook. Your SLOs should always be < 100% reliability as it's very expensive to get near 100%, it becomes more technically complex, and users generally don't need 100% to have an acceptable experience.\n",
     "    * SLOs are measured by SLIs and can be a single target value or a range of values\n",
     "    * SLOs are agreed-upon bounds regarding how often SLIs must be met. For example:\n",
@@ -142,7 +142,24 @@
     "\n",
     "### Aspirational SLOs\n",
     "* Typically higher than achievable/standard SLOs\n",
-    "* Set a reasonable target and begin measuring \n"
+    "* Set a reasonable target and begin measuring \n",
+    "* Compare user feedback with SLOs and ensure they align\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Service Level Agreement (SLA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* <ins>Service Level Agreement (SLA)</ins>:"
    ]
   },
   {
