--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -80,43 +80,90 @@
     "\n",
     "### Precision@K\n",
     "\n",
-    "A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It is the ratio of correctly identified relevant items within the total recommended items (the K-long list). As such, it answers the question, out of the top-K items suggested, how many are actually relevant to the user? \n",
+    "<ins>Precision@K</ins>: A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It is the ratio of correctly identified relevant items within the total recommended items (the K-long list). As such, it answers the question, out of the top-K items suggested, how many are actually relevant to the user?\n",
     "* K is the cut-off threshold that you choose to limit your evaluation to and it's dependent on the expectation of how many items your user is likely to interact with.\n",
     "* Relevance is a binary label that is specific to your use case. For example, you might measure an item as relevant if a user clicks on it, adds it to a shopping cart, or purchases it.\n",
-    "\n",
-    "$\\text{Precision@K} = \\frac{\\text{Number of relevant items in K}}{Total number of items in K}$\n",
-    "\n",
-    "* Range: 0-1, a higher value means better performance\n",
-    "* Limitations:\n",
+    "* <ins>Used in</ins>: ranking algorithms (search systems, RAG)\n",
+    "* <ins>Range</ins>: 0-1, a higher value means better performance\n",
+    "* <ins>Limitations</ins>:\n",
     "    * Only reflects the number of relevant items in the top K, doesn't evaluate the ranking quality inside of K\n",
+    "\n",
+    "<ins>Equation</ins>: $\\text{Precision@K} = \\frac{\\text{Number of relevant items in K}}{\\text{Total number of items in K}}$\n",
+    "\n",
     "\n",
     "### Recall@K \n",
     "\n",
-    "A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It measures the share of revelant items captured within the top K positions\n",
-    "* Range: 0-1, a higher value means better performance\n",
+    "<ins>Recall@K</ins>: A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It measures the share of revelant items captured within the top K positions\n",
+    "* <ins>Used in</ins>: ranking algorithms (search systems, RAG)\n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: 0-1, a higher value means better performance\n",
     "* Limitations:\n",
     "    * Only reflects the number of relevant items in the top K, doesn't evaluate the ranking quality inside of K\n",
     "\n",
     "### F-Score@K\n",
     "\n",
-    "A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It provides a balanced measure of Precision@K and Recall@K\n",
-    "* Range: 0-1, a higher value means better performance\n",
-    "* Limitations:\n",
+    "<ins>F-Score@K</ins>: A common metric to evaluate the performance of ranking algorithms (search systems, RAG, etc.). It provides a balanced measure of Precision@K and Recall@K\n",
+    "* <ins>Used in</ins>: ranking algorithms (search systems, RAG)\n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: 0-1, a higher value means better performance\n",
+    "* <ins>Limitations</ins>:\n",
     "    * Only reflects the number of relevant items in the top K, doesn't evaluate the ranking quality inside of K\n",
     "\n",
     "### Apology Rate\n",
     "\n",
+    "<ins>Apology Rate</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
+    "\n",
     "### No Response Rate\n",
+    "\n",
+    "<ins>No Response Rate</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
     "\n",
     "### Perplexity\n",
     "\n",
+    "<ins>Perplexity</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
+    "\n",
     "### ROUGE Scores\n",
+    "\n",
+    "<ins>ROUGE Scores</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
     "\n",
     "### BLEU Score\n",
     "\n",
+    "<ins>BLEU Score</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
+    "\n",
     "### Intelligence\n",
     "\n",
-    "### Relevance"
+    "<ins>Intelligence</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
+    "\n",
+    "### Relevance\n",
+    "\n",
+    "<ins>Relevance</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:"
    ]
   },
   {
@@ -186,6 +233,59 @@
    "source": [
     "---\n",
     "## Retrieval Augmented Generation (RAG)\n",
+    "\n",
+    "<ins>RAG</ins>: an architectural framework, introduced by Meta AI Research, that enhances LLMs by incorporating external data retrieval mechanisms. This integration allows LLMs to access real-time, relevant information, thereby addressing the limitations of traditional generative models that rely solely on static training data. By retrieving pertinent documents or data points in response to specific queries, RAG ensures that the generated outputs are not only contextually appropriate but also factually accurate, significantly reducing the incidence of outdated or erroneous information. This capability is particularly beneficial in applications such as customer support and knowledge management, where timely and precise responses are critical. \n",
+    "\n",
+    "The primary methods employed in RAG involve a two-stage process: \n",
+    "1. Retrieving relevant information from a curated set of external sources.\n",
+    "2. Utilizing this information to inform the generation of responses. \n",
+    "\n",
+    "This dual approach allows RAG to dynamically augment the generative capabilities of LLMs with up-to-date context, enhancing their performance across various tasks. Techniques such as vector-based retrieval and query expansion are commonly used to improve the relevance and accuracy of the retrieved information. Furthermore, RAG systems can be designed to include mechanisms for citation and source attribution, enabling users to verify the accuracy of the generated content and fostering trust in AI outputs.\n",
+    "\n",
+    "### Issues with RAG\n",
+    "Despite its advantages, implementing RAG poses several challenges that organizations must navigate. One significant hurdle is the complexity of integrating retrieval systems with generative models, which requires specialized knowledge in both natural language processing and information retrieval. Additionally, the effectiveness of a RAG system is heavily dependent on the quality and reliability of the external data sources it utilizes; poor-quality data can lead to misleading outputs or propagate inaccuracies. Latency issues can also arise during retrieval operations, particularly when accessing large datasets or multiple sources simultaneously, potentially impacting user experience in time-sensitive applications.\n",
+    "\n",
+    "### RAG Implementation Process (2 Step)\n",
+    "\n",
+    "#### 1. Retrieval QA Chain: Ingestion\n",
+    "1. Ingest documents\n",
+    "2. Split documents into chunks\n",
+    "3. Convert chunks into vectors via an embedding model\n",
+    "4. Create an index of vectors (Vector Store)\n",
+    "\n",
+    "#### 2. Retrieval QA Chain: Query Time\n",
+    "1. User queries model\n",
+    "2. Convert user query into vector using embedding model\n",
+    "3. Conduct similarity search using query vector and vector store\n",
+    "4. Retrieve top-k relevant documents\n",
+    "5. LLM generates response using documents as additional context\n",
+    "\n",
+    "### Secondary Concepts\n",
+    "* REALM Technique (RAG during pretraining)\n",
+    "* Speculative RAG (Google Research)\n",
+    "* Corrective RAG\n",
+    "* Self-RAG (Allen AI)\n",
+    "* Fusion-RAG\n",
+    "* Graph RAG (Microsoft Research)\n",
+    "* Hypothetical Document Embeddings (HyDE) - the technique that inspired RAG\n",
+    "* RAG vs. Fine-Tuning (UC Berkeley paper, retrieval augmented fine tuning)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Multimodal Retrieval Augmented Generation (MLLM RAG)\n",
+    "\n",
+    "### Retrieval QA Chain: Ingestion\n",
+    "Same flow as standard RAG but for images do the following:\n",
+    "* Extract images from files\n",
+    "* Send images to MLLM to generate an image description\n",
+    "* Create embeddings of image with multimodal embeddings\n",
+    "* Create embeddings of text description from MLLMs using text embeddings\n",
     "\n"
    ]
   },
@@ -195,7 +295,10 @@
    "source": [
     "---\n",
     "\n",
-    "## Agents"
+    "## Agents\n",
+    "\n",
+    "### Model Context Protocol (MCP)\n",
+    "* [A Deep Dive Into MCP and the Future of AI Tooling](https://a16z.com/a-deep-dive-into-mcp-and-the-future-of-ai-tooling/)"
    ]
   },
   {
