--- a/cloud/gcp/gcp_devops_cert.ipynb
+++ b/cloud/gcp/gcp_devops_cert.ipynb
@@ -103,7 +103,7 @@
     "* Latency: The time it takes for your service to fulfill a request\n",
     "* Errors: The rate at which your service fails\n",
     "* Traffic: How much demand is directed at your service\n",
-    "* Saturation: A meausure of how close to fully utilized the service's resources are\n",
+    "* Saturation: A measure of how close to fully utilized the service's resources are\n",
     "\n",
     "### Simple SLI Aggregation Equation\n",
     "\n",
