--- a/robotics/self_driving_cars_class/2_bayesian_thinking.ipynb
+++ b/robotics/self_driving_cars_class/2_bayesian_thinking.ipynb
@@ -19,23 +19,23 @@
     "    * Probability starts with causes and infers the underlying data of those causes.\n",
     "\n",
     "Complementary Outcomes (i.e. Probability of an Opposite Event) - Coins\n",
-    "* For an unfair coin, the P(Heads) = 0.7, so the P(Tails) = 1 - P(Heads), i.e. 0.3\n",
+    "* For an unfair coin, the $P(Heads) = 0.7$ , so the $P(Tails) = 1 - P(Heads)$\n",
     "\n",
     "Simple Probability of Composite Events (i.e. two events occurring in a row, independently)\n",
-    "* For a fair coin, the probability of two heads in a row is P(H, H) = 0.5 * 0.5 = 0.25\n",
-    "* For an unfair coin, the probability of heads is P(H) = 0.6. So the joint probability of P(H, H) = 0.6 * 0.6 = 0.36\n",
-    "* For an unfair coin, the probability of heads is P(H) = 1.0. So the joint probability of P(H, H) = 1.0 and the joint probability of P(H, T) = 1.0 * 0.0 = 0.0\n",
+    "* For a fair coin, the probability of two heads in a row is $P(H, H) = 0.5 * 0.5 = 0.25$\n",
+    "* For an unfair coin, the probability of heads is $P(H) = 0.6$ . So the joint probability of $P(H, H) = 0.6 * 0.6 = 0.36$\n",
+    "* For an unfair coin, the probability of heads is $P(H) = 1.0$ . So the joint probability of $P(H, H) = 1.0$ and the joint probability of $P(H, T) = 1.0 * 0.0 = 0.0$\n",
     "\n",
     "Probability of Composite Events Continued - Coins\n",
     "* For a fair coin, thrown 3 times, what is the probability that exactly one flip comes up heads\n",
-    "    * P(Exactly one H in 3 flips) = 0.125 + 0.125 + 0.125 = 0.375 \n",
-    "* For an unfair coin, the P(Heads) = 0.6, what is the probability that exactly one flip comes up heads\n",
-    "    * 0.6 * 0.4 * 0.4 = 0.096\n",
-    "    * P(Exactly one H in 3 flips) = (0.6 * 0.4 * 0.4) + (0.4 * 0.6 * 0.4) + (0.4 * 0.4 * 0.6) = 0.096 + 0.096 + 0.096 = 0.288\n",
+    "    * $P(\\text{Exactly one H in 3 flips}) = 0.125 + 0.125 + 0.125 = 0.375$ \n",
+    "* For an unfair coin, the $P(Heads) = 0.6$ , what is the probability that exactly one flip comes up heads\n",
+    "    * $0.6 * 0.4 * 0.4 = 0.096$\n",
+    "    * $P(\\text{Exactly one H in 3 flips}) = (0.6 * 0.4 * 0.4) + (0.4 * 0.6 * 0.4) + (0.4 * 0.4 * 0.6) = 0.096 + 0.096 + 0.096 = 0.288$\n",
     "\n",
     "Probability of Composite Events - Dice\n",
-    "* For a fair die, P(Dice = Even) = 0.5\n",
-    "* For a fair die, P(Double) = (1/6 * 1/6) * 6 = 0.1667"
+    "* For a fair die, $P(Dice = Even) = 0.5$\n",
+    "* For a fair die, $P(Double) = (1/6 * 1/6) * 6 = 0.1667$"
    ]
   },
   {
