updates to LLM notes

--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -171,6 +171,22 @@
    "metadata": {},
    "source": [
     "---\n",
+    "## Benchmark Metrics\n",
+    "\n",
+    "### ELO\n",
+    "\n",
+    "<ins>ELO</ins>: \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Equation</ins>: \n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "\n",
     "## LLM Eval Techniques\n",
     "\n",
@@ -184,6 +200,41 @@
     "### A/B Testing Between Chatbots\n",
     "\n",
     "### Bias Detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## LLM Interpretability\n",
+    "\n",
+    "### Dictionary Learning\n",
+    "\n",
+    "<ins>Dictionary Learning</ins>: a technique developed by Anthropic that helps uncover millions of neuron patterns or “features” and match them to human concepts. Think of it as building a rough glossary for the brain of an LLM.\n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Citations</ins>: \n",
+    "    * [Scaling Monosemanticity: Extracting Interpretable Features from Claude 3 Sonnet](https://transformer-circuits.pub/2024/scaling-monosemanticity/index.html?utm_source=www.turingpost.com&utm_medium=newsletter&utm_campaign=gemini-is-rising-while-anthropic-works-on-opening-the-black-box-of-ai&_bhlid=2e798d9d7f3d0fa403e5dd525162c467e41be7b2)\n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
+    "\n",
+    "### Monosemanticity\n",
+    "\n",
+    "<ins>Dictionary Learning</ins>: the idea that a single neuron pattern might align with a single meaning. A clean signal, not a messy blend. Theoretical work laid out by Anthropic's interpretability team.\n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Citations</ins>: \n",
+    "    * [Towards Monosemanticity: Decomposing Language Models With Dictionary Learning](https://www.anthropic.com/research/towards-monosemanticity-decomposing-language-models-with-dictionary-learning?utm_source=www.turingpost.com&utm_medium=newsletter&utm_campaign=gemini-is-rising-while-anthropic-works-on-opening-the-black-box-of-ai&_bhlid=8606cb7ea3b2e400fc2c44136f3dc1a6f8b28041)\n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:\n",
+    "\n",
+    "### Attributional Graphs\n",
+    "\n",
+    "<ins>Dictionary Learning</ins>: A technique used by Anthropic's interpretability team to trace how Claude 3.5 Haiku reasons across multiple steps – writing poems, diagnosing patients, even planning ahead. The findings make one thing clear, these models aren’t just completing sentences. They’re constructing thoughts. \n",
+    "* <ins>Used in</ins>: \n",
+    "* <ins>Citations</ins>: \n",
+    "    * [On the Biology of a Large Language Model](https://transformer-circuits.pub/2025/attribution-graphs/biology.html?utm_source=www.turingpost.com&utm_medium=newsletter&utm_campaign=gemini-is-rising-while-anthropic-works-on-opening-the-black-box-of-ai&_bhlid=357b4f39d91905c184ff9190a3bcc3eff0d7ea32)\n",
+    "* <ins>Range</ins>: \n",
+    "* <ins>Limitations</ins>:"
    ]
   },
   {
