latest notes updates.

--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "### Monosemanticity\n",
     "\n",
-    "<ins>Dictionary Learning</ins>: the idea that a single neuron pattern might align with a single meaning. A clean signal, not a messy blend. Theoretical work laid out by Anthropic's interpretability team.\n",
+    "<ins>Monosemanticity</ins>: the idea that a single neuron pattern might align with a single meaning. A clean signal, not a messy blend. Theoretical work laid out by Anthropic's interpretability team.\n",
     "* <ins>Used in</ins>: \n",
     "* <ins>Citations</ins>: \n",
     "    * [Towards Monosemanticity: Decomposing Language Models With Dictionary Learning](https://www.anthropic.com/research/towards-monosemanticity-decomposing-language-models-with-dictionary-learning?utm_source=www.turingpost.com&utm_medium=newsletter&utm_campaign=gemini-is-rising-while-anthropic-works-on-opening-the-black-box-of-ai&_bhlid=8606cb7ea3b2e400fc2c44136f3dc1a6f8b28041)\n",
@@ -229,7 +229,7 @@
     "\n",
     "### Attributional Graphs\n",
     "\n",
-    "<ins>Dictionary Learning</ins>: A technique used by Anthropic's interpretability team to trace how Claude 3.5 Haiku reasons across multiple steps – writing poems, diagnosing patients, even planning ahead. The findings make one thing clear, these models aren’t just completing sentences. They’re constructing thoughts. \n",
+    "<ins>Attributional Graphs</ins>: A technique used by Anthropic's interpretability team to trace how Claude 3.5 Haiku reasons across multiple steps – writing poems, diagnosing patients, even planning ahead. The findings make one thing clear, these models aren’t just completing sentences. They’re constructing thoughts. \n",
     "* <ins>Used in</ins>: \n",
     "* <ins>Citations</ins>: \n",
     "    * [On the Biology of a Large Language Model](https://transformer-circuits.pub/2025/attribution-graphs/biology.html?utm_source=www.turingpost.com&utm_medium=newsletter&utm_campaign=gemini-is-rising-while-anthropic-works-on-opening-the-black-box-of-ai&_bhlid=357b4f39d91905c184ff9190a3bcc3eff0d7ea32)\n",
