--- a/robotics/self_driving_cars_class/2_bayesian_thinking.ipynb
+++ b/robotics/self_driving_cars_class/2_bayesian_thinking.ipynb
@@ -247,7 +247,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bayes' Rule"
+    "## Bayes' Rule\n",
+    "\n",
+    "$\\text{Bayes Rule = Prior Probability + Test Evidence -> Posterior Probability}$\n",
+    "\n",
+    "* <ins>Prior Probability</ins>: the probability before we ran a test\n",
+    "* <ins>Posterior</ins>: the probabiility after running the test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1\n",
+    "<ins>Question</ins>: 1% of the population has cancer. Given that there is a 90% chance that you will test positive if you have cancer and that there is a 90% chance you will test negative if you don't have cancer, what is the probability that you have cancer if you test positive (i.e. $P(Cancer|Positive)$?\n",
+    "\n",
+    "<ins>Answer</ins>: 8.33%\n",
+    "* priors: \n",
+    "    * $P(Cancer) = 0.01 = 1\\%$\n",
+    "    * $P(\\text{Positive Result}|Cancer) = 0.9 = 90\\% $\n",
+    "    * $P(\\text{Positive Result}|\\neg Cancer) = 0.1 = 10\\% $\n",
+    "    * $P(\\text{Negative Result}|\\neg Cancer) = 0.9 = 90\\% $\n",
+    "    * $P(\\neg Cancer) = 0.99 = 99\\%$\n",
+    "* posterior: \n",
+    "    * $P(Cancer|\\text{Positive Result}) = P(C) * P(\\text{Positive Result}|Cancer) = 0.01 * 0.9 = 0.009$\n",
+    "    * $P(\\neg Cancer|\\text{Positive Result})$ = $P(\\neg Cancer) * P(Positive|\\neg Cancer) = 0.99 * 0.1 = 0.099$\n",
+    "\n"
    ]
   },
   {
