--- a/agile_and_pm/sdlc_and_pm_notes.ipynb
+++ b/agile_and_pm/sdlc_and_pm_notes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Software Development Lifecycle (SDLC)"
+    "# Software Development Lifecycle (SDLC) and Product Management"
    ]
   },
   {
@@ -25,6 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Functional vs. Non Functional Requirements\n",
     "* <ins>Functional Requirement</ins>:\n",
     "* <ins>Non-Functional Requirement</ins>:"
@@ -34,6 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Customer User Journeys\n",
     "* <ins>User Journey</ins>: a sequence of tasks central to user experience and crucial to service"
    ]
@@ -42,6 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Good General Development Team Norms\n",
     "* Be Humble: You're smart yet always interested in learning from others\n",
     "* Work Transparently: You always deal in an honest, direct, and transparent way.\n",
@@ -54,12 +57,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## General Development Axioms\n",
     "\n",
     "* The cost of fixing errors increases exponentially the later they are found in the development cycle. This cost can come in the following forms:\n",
     "    * Time to fix the bugs and create post mortem docs (operational cost)\n",
     "    * Downtime caused by the bugs (loss of revenue)\n",
     "    * Reputational cost (loss of growth, customer trust, etc.) caused by the downtime."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Case Studies\n",
+    "\n",
+    "### Organization Structures\n",
+    "* [The Document Culture of Amazon](https://justingarrison.com/blog/2021-03-15-the-document-culture-of-amazon/)\n",
+    "* [The Amazon API Memo](https://chrislaing.net/blog/the-memo/)"
    ]
   },
   {
