--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -348,8 +348,16 @@
     "\n",
     "## Agents\n",
     "\n",
-    "### Model Context Protocol (MCP)\n",
-    "* [A Deep Dive Into MCP and the Future of AI Tooling](https://a16z.com/a-deep-dive-into-mcp-and-the-future-of-ai-tooling/)"
+    "### Protocols\n",
+    "\n",
+    "#### Model Context Protocol (MCP)\n",
+    "* Developed by Anthropic and currently adopted by OpenAI, Google, etc. It connects models to data from sources like business tools and software to complete tasks, as well as from content repositories and app development environments. The protocol enables developers to build two-way connections between data sources and AI-powered applications, such as chatbots.\n",
+    "* [A Deep Dive Into MCP and the Future of AI Tooling](https://a16z.com/a-deep-dive-into-mcp-and-the-future-of-ai-tooling/)\n",
+    "\n",
+    "#### Agent2Agent Protocol (A2A)\n",
+    "* Developed by Google it is used for Agent-to-Agent communication\n",
+    "* [Announcing the Agent2Agent Protocol (A2A)](https://developers.googleblog.com/en/a2a-a-new-era-of-agent-interoperability/?utm_source=www.dailyzaps.com&utm_medium=newsletter&utm_campaign=chatgpt-now-remembers-everything-you-tell-it&_bhlid=4dced5b40e6e3129347043d41cfce8fc1e352e22)\n",
+    "* A2A allows agents to securely exchange information, coordinate actions, and manage tasks across siloed systems. Built on familiar standards like HTTP and JSON-RPC, A2A is secure by default, supports long-running and multi-modal tasks, and provides a standardized method for agent communication and capability discovery. Google released A2A as open source with plans for a production-ready version later this year.\n"
    ]
   },
   {
