updates to bayes notes

--- a/robotics/self_driving_cars_class/2_bayesian_thinking.ipynb
+++ b/robotics/self_driving_cars_class/2_bayesian_thinking.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.542\n"
+      "0.467\n"
      ]
     }
    ],
@@ -247,6 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Bayes' Rule\n",
     "\n",
     "$\\text{Bayes Rule = Prior Probability + Test Evidence -> Posterior Probability}$\n",
@@ -269,10 +270,48 @@
     "    * $P(\\text{Positive Result}|\\neg Cancer) = 0.1 = 10\\% $\n",
     "    * $P(\\text{Negative Result}|\\neg Cancer) = 0.9 = 90\\% $\n",
     "    * $P(\\neg Cancer) = 0.99 = 99\\%$\n",
-    "* posterior: \n",
+    "* joint: \n",
     "    * $P(Cancer|\\text{Positive Result}) = P(C) * P(\\text{Positive Result}|Cancer) = 0.01 * 0.9 = 0.009$\n",
     "    * $P(\\neg Cancer|\\text{Positive Result})$ = $P(\\neg Cancer) * P(Positive|\\neg Cancer) = 0.99 * 0.1 = 0.099$\n",
-    "\n"
+    "* Normalizer:\n",
+    "    * $P(Pos) = P(C, Pos) + P(\\neg C, Pos) = 0.108$\n",
+    "* Posterior:\n",
+    "    * $P(C|Pos) = Joint/Normalizer = 0.009/0.108 = 0.0833$\n",
+    "    * $P(\\neg C|Pos) = Joint/Normalizer = 0.099/0.108 = 0.916$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2 - Disease 2\n",
+    "\n",
+    "A disease that effects 10% of the population with a test with a high sensitivity (0.9) and low specificity (0.5)\n",
+    "\n",
+    "Given a Negative (Neg) test:\n",
+    "\n",
+    "Priors\n",
+    "* $P(C) = 0.1$ (10% of the population has the disease)\n",
+    "* $P(Pos|C) = 0.9$ (Sensitivity)\n",
+    "* $P(Neg|\\neg C) = 0.5$ (Specificity)\n",
+    "* $P(\\neg C) = 0.9$\n",
+    "* $P(Neg|C) = 0.1$\n",
+    "* $P(Pos|\\neg C) = 0.5$ (Specificity)\n",
+    "Joint\n",
+    "* $P(C, Neg) = 0.1 * 0.1 = 0.01$\n",
+    "* $P(\\neg C, Neg) = 0.9 * 0.1 = 0.45$\n",
+    "* $P(Neg) = 0.01 + 0.45 = 0.46$\n",
+    "* $P(C|Neg) = 0.1 / 0.46 = 0.0217$ This means that starting with a 10% chance of having cancer, given a negative test result, you now have a 2% chance of cancer\n",
+    "* $P(\\neg C| Neg) = 0.45 / 0.46 = 0.9783$\n",
+    "\n",
+    "Given a Positive (Pos) test:\n",
+    "\n",
+    "Priors\n",
+    "* The same as above\n",
+    "Joint\n",
+    "* $P(C, Pos) = $\n",
+    "* $P(\\neg C, Pos) = $\n",
+    "* $$\n"
    ]
   },
   {
